Update instructions for Java 22
Also drop preview flag in the main build.